Fix rating forcing notes input out of place

--- a/web/front_end/vinoteca-style.sass
+++ b/web/front_end/vinoteca-style.sass
@@ -365,3 +365,7 @@ aside.special-char-picker
 
 form
   margin-bottom: 20px
+
+// Fix range field forcing notes out of place in new wines form
+p.range-field
+  margin-bottom: 0px
